--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  outline: none;
+  border: none;
+  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  color: var(--grey);
+  background-color: var(--dark);
+}
+
+#root {
+  --green: #007242;
+  --green-light: #009b5a;
+  --grey: #c3c3c3;
+  --light: #e7e7e7;
+  --dark: #1b1b1b;
+  --blue: #204da7;
 }
