--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+#root {
+  --green: #007242;
+  --green-light: #009b5a;
+  --grey: #c3c3c3;
+  --light: #e7e7e7;
+  --dark: #1b1b1b;
+  --blue: #204da7;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,14 +18,9 @@
 
 body {
   color: var(--grey);
-  background-color: var(--dark);
 }
 
-#root {
-  --green: #007242;
-  --green-light: #009b5a;
-  --grey: #c3c3c3;
-  --light: #e7e7e7;
-  --dark: #1b1b1b;
-  --blue: #204da7;
+.swiper {
+  width: 100%;
+  height: 100%;
 }
