--- a/src/pages/Board/Board.module.css
+++ b/src/pages/Board/Board.module.css
@@ -3,134 +3,52 @@
   flex-direction: column;
   gap: 40px;
   padding: 150px 300px;
-  overflow: hidden;
 }
 
-.top {
-  display: flex;
-  justify-content: space-between;
-  border-radius: 10px;
-  padding: 30px;
-  color: var(--light);
-  background-color: var(--green);
-  box-shadow: -1px 3px 0 var(--dark);
-  font-size: 25px;
+.lists {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-items: center;
 }
 
-.top h2 {
-  font-size: 25px;
+@media screen and (max-width: 1900px) {
+  .wrapper {
+    padding: 50px 100px;
+  }
 }
 
-.back {
-  color: var(--light);
-  text-decoration: none;
+@media screen and (max-width: 1550px) {
+  .wrapper {
+    padding: 50px 50px;
+  }
 }
 
-.board {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  color: var(--dark);
-  padding: 20px;
-  white-space: nowrap;
-  width: 300px;
-  overflow: hidden;
-  border-radius: 10px;
-  margin-bottom: 40px;
-  background-color: var(--light);
-  font-size: 20px;
-  text-overflow: ellipsis;
-}
-.board h3 {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
+@media screen and (max-width: 1400px) {
+  .lists {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
-.remove,
-.removeList {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  cursor: pointer;
+@media screen and (max-width: 1050px) {
+  .lists {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
-.removeList {
-  top: 4px;
-  width: 25px;
-  height: 25px;
+@media screen and (max-width: 750px) {
+  .lists {
+    grid-template-columns: 1fr;
+  }
 }
 
-.list {
-  position: relative;
-  list-style-type: none;
-  margin-top: 10px;
-  padding: 5px 25px 5px 5px;
-  background-color: var(--green-light);
-  border-radius: 10px;
-  color: var(--light);
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  cursor: pointer;
+@media screen and (max-width: 400px) {
+  .wrapper {
+    padding: 50px 10px;
+  }
 }
 
-.check {
-  text-decoration: line-through;
-  background-color: var(--grey);
-}
-
-.bottom {
-  width: 100%;
-  padding-bottom: 30px;
-}
-
-.create {
-  display: flex;
-  flex-direction: column;
-  width: 300px;
-  height: 150px;
-  padding: 20px;
-  border-radius: 10px;
-  background-color: var(--light);
-  text-align: center;
-  gap: 10px;
-  margin: 0 auto;
-}
-
-.open {
-  display: inherit;
-  color: var(--light);
-  background-color: var(--blue);
-  cursor: pointer;
-  font-size: 25px;
-  justify-content: center;
-  align-items: center;
-}
-
-.create div {
-  display: flex;
-  gap: 20px;
-  margin: 0 auto;
-}
-
-.create input,
-.board input {
-  padding: 10px;
-  width: 100%;
-  border-radius: 5px;
-}
-
-.create span {
-  color: var(--blue);
-}
-
-.create button {
-  padding: 10px;
-  background-color: var(--green-light);
-  border-radius: 10px;
-  color: var(--light);
-  font-weight: 600;
-  cursor: pointer;
+@media screen and (max-width: 330px) {
+  .wrapper {
+    padding: 50px 0;
+  }
 }
